--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -7,6 +7,14 @@
 
 
     <fragment
+        android:id="@+id/exampleFragment"
+        android:name="com.app.baseproject.ExampleFragment"
+        android:label="Splash Screen"
+        tools:layout="@layout/contact_screen">
+
+    </fragment>
+
+    <fragment
         android:id="@+id/splashScreen"
         android:name="com.app.baseproject.splash.SplashScreen"
         android:label="Splash Screen"
